# bevy_pong

./: Cargo.toml  devenv.nix
src/: lib.rs  main.rs  physics.rs  prelude.rs
src/gameplay/: ball.rs  bg.rs  board.rs  gutters.rs  input.rs  mod.rs  paddles.rs  pause.rs  reset.rs  scoreboard.rs  scoring.rs
src/screens/: game.rs  mod.rs  pause.rs  title.rs
src/theming/: interactions.rs  mod.rs  palette.rs  ui_components.rs
