[package]
name = "pong_rapier"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["wayland", "dynamic_linking"] }
bevy_ecs_ldtk = "0.11.0"
# Use instead for a release build
# bevy = "0.15.3"

# small optimiazations for local code
[profile.dev]
opt-level = 1

# enable high optimiazations for dependencies
[profile.dev.package."*"]
opt-level = 3
