[package]
name = "pong_avian"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
bevy = { version = "0.15.3", features = ["wayland", "dynamic_linking"] }
bevy_ecs_ldtk = "0.11.0"
avian2d = { version = "0.2", features = ["debug-plugin"] }

[target.'cfg(debug_assertions)'.dependencies]
bevy-inspector-egui = "0.30.0"

# small optimiazations for local code
[profile.dev]
opt-level = 1

# enable high optimiazations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "s"
